Purchase/rental strings

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -51,6 +51,7 @@
   "Languages": "Languages",
   "Media Type": "Media Type",
   "License": "License",
+  "Restricted to": "Restricted to",
   "More": "More",
   "Related": "Related",
   "No related content found": "No related content found",
@@ -60,8 +61,6 @@
   "Title": "Title",
   "Description": "Description",
   "Description of your content": "Description of your content",
-  "Price": "Price",
-  "Free": "Free",
   "Name": "Name",
   "Deposit": "Deposit",
   "Language": "Language",
@@ -862,6 +861,8 @@
   "all": "all",
   "Payment Type": "Payment Type",
   "Purchase": "Purchase",
+  "Rent": "Rent",
+  "Duration": "Duration",
   "No transactions.": "No transactions.",
   "No Transactions": "No Transactions",
   "Status": "Status",
@@ -951,6 +952,12 @@
   "in a month": "in a month",
   "in a year": "in a year",
   "Just now": "Just now",
+  "Months": "Months",
+  "Weeks": "Weeks",
+  "Days": "Days",
+  "Hours": "Hours",
+  "Minutes": "Minutes",
+  "Seconds": "Seconds",
   "Message received! Thanks for helping.": "Message received! Thanks for helping.",
   "Report an issue or request a feature": "Report an issue or request a feature",
   "Please describe the problem you experienced or the feature you want to see and any information you think might be useful to us. Links to screenshots are great!": "Please describe the problem you experienced or the feature you want to see and any information you think might be useful to us. Links to screenshots are great!",
@@ -1608,7 +1615,6 @@
   "Long (> 20 min)": "Long (> 20 min)",
   "Longer than": "Longer than",
   "Shorter than": "Shorter than",
-  "Minutes": "Minutes",
   "Results boosted by %lbc%": "Results boosted by %lbc%",
   "Learn more about Credits on %DOMAIN%": "Learn more about Credits on %DOMAIN%",
   "Uploaded image will be visible in a few minutes after you submit this form.": "Uploaded image will be visible in a few minutes after you submit this form.",
@@ -2467,7 +2473,6 @@
   "Add a card --[replaces add_a_card]--": "Add a card",
   "%add_a_card% to purchase content": "%add_a_card% to purchase content",
   "%add_a_card% to preorder content": "%add_a_card% to preorder content",
-  "This content can be purchased for %currency%%amount%": "This content can be purchased for %currency%%amount%",
   "Thanks for purchasing, enjoy your content!": "Thanks for purchasing, enjoy your content!",
   "This content is now available, click here to view it": "This content is now available, click here to view it",
   "Your preordered content is now available, click here to view it": "Your preordered content is now available, click here to view it",
@@ -2628,6 +2633,23 @@
   "Finish verification": "Finish verification",
   "Create an account": "Create an account",
   "%channel_name% invites you to the party!": "%channel_name% invites you to the party!",
+  "Price": "Price",
+  "Free": "Free",
+  "Purchase / Rent": "Purchase / Rent",
+  "Purchase with Credits": "Purchase with Credits",
+  "%connect_your_bank_account% to enable purchasing and renting functionality.": "%connect_your_bank_account% to enable purchasing and renting functionality.",
+  "%set_up_your_bank_account% to receive payments.": "%set_up_your_bank_account% to receive payments.",
+  "Set up your bank account": "Set up your bank account",
+  "By continuing, you accept the %paid_content_terms_and_conditions%.": "By continuing, you accept the %paid_content_terms_and_conditions%.",
+  "paid-content terms and conditions": "paid-content terms and conditions",
+  "Payment processing fee: %currency%%ppf% • Odysee platform fee: %currency%%opf%": "Payment processing fee: %currency%%ppf% • Odysee platform fee: %currency%%opf%",
+  "processing and platform fees apply": "processing and platform fees apply",
+  "Purchase for %currency%%amount%": "Purchase for %currency%%amount%",
+  "Rent %duration% for %currency%%amount%": "Rent %duration% for %currency%%amount%",
+  "Purchase or Rent": "Purchase or Rent",
+  "Purchase completed successfully": "Purchase completed successfully",
+  "Rental completed successfully": "Rental completed successfully",
+  "Enjoy!": "Enjoy!",
 
   "--end--": "--end--"
 }
