Add functionality around protected static content (#2289)
* handle case when unauthed for static content

* pass stripe environment when getting file

* fixes for review

* add string to allow for translation

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -2620,6 +2620,7 @@
   "This chat is in members-only mode": "This chat is in members-only mode",
   "This comment section is in members-only mode": "This comment section is in members-only mode",
   "To participate, consider buying a membership with the members-only chat perk from this creator!": "To participate, consider buying a membership with the members-only chat perk from this creator!",
+  "This download is protected content, join a membership to gain access": "This download is protected content, join a membership to gain access",
   "Only USD banking currently supported, please check back later!": "Only USD banking currently supported, please check back later!",
   "Bank account connected": "Bank account connected",
   "Only \"%channel_name%\" members are able to chat right now. Enjoy!": "Only \"%channel_name%\" members are able to chat right now. Enjoy!",
