Link to Stripe billing / account sections (#2291)
* add links to stripe account and billing section

* pull out consts

* add email to account status overview

* fix things pointed out in review

* add strings for translation

* touchups

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -2107,6 +2107,8 @@
   "Card details": "Card details",
   "Remove Card": "Remove Card",
   "Currency To Use": "Currency To Use",
+  "View billing history on Stripe": "View billing history on Stripe",
+  "Visit Stripe": "Visit Stripe",
   "Sorry, there was an error in processing your payment!": "Sorry, there was an error in processing your payment!",
   "Congratulations! Your account has been connected with Odysee.": "Congratulations! Your account has been connected with Odysee.",
   "Although your account is connected it still requires verification to begin receiving tips.": "Although your account is connected it still requires verification to begin receiving tips.",
@@ -2116,6 +2118,8 @@
   "Congratulations, you have already begun receiving tips on Odysee!": "Congratulations, you have already begun receiving tips on Odysee!",
   "Your pending account balance is %balance% USD. Functionality to view and receive your transactions will land soon.": "Your pending account balance is %balance% USD. Functionality to view and receive your transactions will land soon.",
   "Connect your bank account to be able to cash your pending balance out to your account.": "Connect your bank account to be able to cash your pending balance out to your account.",
+  "The email you registered with Stripe is %email%": "The email you registered with Stripe is %email%",
+  "View Account On Stripe": "View Account On Stripe",
   "Tip Creators": "Tip Creators",
   "Only select creators can receive tips at this time": "Only select creators can receive tips at this time",
   "The payment will be made from your saved card": "The payment will be made from your saved card",
