feat: allow adding bank account inline
- it is a bit weird how the button loads and then turns into a link but that is how it is needed to be done in order to confirm account intent and then fetch link url to stripe
- remove calls where it is not needed
- use window.location.href for account link redirect url

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -2097,6 +2097,7 @@
   "Connect your card with Odysee": "Connect your card with Odysee",
   "Getting your card connection status...": "Getting your card connection status...",
   "Getting your bank account connection status...": "Getting your bank account connection status...",
+  "Click here to connect a bank account": "Click here to connect a bank account",
   "Connect your bank account to Odysee to receive donations directly from users": "Connect your bank account to Odysee to receive donations directly from users",
   "Connect your bank account": "Connect your bank account",
   "Please enter the name on the card": "Please enter the name on the card",
