remove watchman (and errors!)

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -2318,5 +2318,6 @@
   "Odysee Connect --[Section in Help Page]--": "Odysee Connect",
   "Your hub has blocked this content because it subscribes to the following blocking channel:": "Your hub has blocked this content because it subscribes to the following blocking channel:",
   "Your hub has blocked access to this content do to a complaint received under the US Digital Millennium Copyright Act.": "Your hub has blocked access to this content do to a complaint received under the US Digital Millennium Copyright Act.",
+  "Autoplay Next is on.": "Autoplay Next is on.",
   "--end--": "--end--"
 }
