--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -2319,5 +2319,7 @@
   "Your hub has blocked this content because it subscribes to the following blocking channel:": "Your hub has blocked this content because it subscribes to the following blocking channel:",
   "Your hub has blocked access to this content do to a complaint received under the US Digital Millennium Copyright Act.": "Your hub has blocked access to this content do to a complaint received under the US Digital Millennium Copyright Act.",
   "Autoplay Next is on.": "Autoplay Next is on.",
+  "Content Blocked": "Content Blocked",
+  "Your hub has blocked %content% because it subscribes to the following blocking channel:": "Your hub has blocked %content% because it subscribes to the following blocking channel:",
   "--end--": "--end--"
 }
