fix large file uploads

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -2321,5 +2321,6 @@
   "Autoplay Next is on.": "Autoplay Next is on.",
   "This will be visible in a few minutes after you submit this form.": "This will be visible in a few minutes after you submit this form.",
   "Anon --[used in <%anonymous% Reposted>]--": "Anon",
+  "Your update is now pending. It will take a few minutes to appear for other users.": "Your update is now pending. It will take a few minutes to appear for other users.",
   "--end--": "--end--"
 }
