typo and ln /usr/bin/python

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,6 +47,9 @@ jobs:
         if: startsWith(runner.os, 'mac')
         run: |
           /bin/bash -c "$(curl -fsSL https://github.com/alfredapp/dependency-scripts/raw/main/scripts/install-python2.sh)"
+          ln -sf /usr/local/bin/python /usr/bin/python
+
+      - name: Create Python Link
 
       - name: Download blockchain headers
         run: |
@@ -55,8 +58,6 @@ jobs:
           ls ./static/daemon
 
       - name: Build
-        if: startsWith(runner.os, 'mac')
-
         run: |
           yarn dlx cross-env
           yarn --network-timeout 600000
