--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -403,7 +403,7 @@
   "Share on Twitter": "Share on Twitter",
   "Share on Telegram": "Share on Telegram",
   "Share via...": "Share via...",
-  "View on lbry.tv": "View on lbry.tv",
+  "View on lbry.tv": "View on %odysee%",
   "Standard messaging rates apply. LBRY will not text or call you otherwise. Having trouble?": "Standard messaging rates apply. LBRY will not text or call you otherwise. Having trouble?",
   "You currently have the highest bid for this name.": "You currently have the highest bid for this name.",
   "You can generate a new address at any time, and any previous addresses will continue to work.": "You can generate a new address at any time, and any previous addresses will continue to work.",
@@ -650,8 +650,8 @@
   "Failed to load %language% translations.": "Failed to load %language% translations.",
   "contact support": "contact support",
   "If you continue to have issues, please %support%.": "If you continue to have issues, please %support%.",
-  "lbry.tv Account": "lbry.tv Account",
-  "Creating a lbry.tv account will allow you to earn rewards, receive content and security updates, and optionally backup your data.": "Creating a lbry.tv account will allow you to earn rewards, receive content and security updates, and optionally backup your data.",
+  "lbry.tv Account": "%odysee% Account",
+  "Creating a lbry.tv account will allow you to earn rewards, receive content and security updates, and optionally backup your data.": "Creating a %odysee% account will allow you to earn rewards, receive content and security updates, and optionally backup your data.",
   "Paid content cannot be embedded": "Paid content cannot be embedded",
   "This content cannot be embedded": "This content cannot be embedded",
   "Your videos are ready to be transferred.": "Your videos are ready to be transferred.",
@@ -692,7 +692,7 @@
   "Click here": "Click here",
   "PDF opened externally. %click_here% to open it again.": "PDF opened externally. %click_here% to open it again.",
   "Wallet Server": "Wallet Server",
-  "lbry.tv wallet servers": "lbry.tv wallet servers",
+  "lbry.tv wallet servers": "%odysee% wallet servers",
   "Custom wallet servers": "Custom wallet servers",
   "Choose a different provider's wallet server.": "Choose a different provider's wallet server.",
   "Host": "Host",
@@ -705,12 +705,12 @@
   "Followers": "Followers",
   "%number% files hidden due to your %content_viewing_preferences_link%": "%number% files hidden due to your %content_viewing_preferences_link%",
   "1 file hidden due to your %content_viewing_preferences_link%": "1 file hidden due to your %content_viewing_preferences_link%",
-  "Use official lbry.tv wallet servers": "Use official lbry.tv wallet servers",
+  "Use official lbry.tv wallet servers": "Use official %odysee% wallet servers",
   "Use custom wallet servers": "Use custom wallet servers",
   "Remove custom wallet server": "Remove custom wallet server",
   "Add": "Add",
   "In response to a complaint we received under the US Digital Millennium Copyright Act, we have blocked access to this content from our applications.": "In response to a complaint we received under the US Digital Millennium Copyright Act, we have blocked access to this content from our applications.",
-  "lbry.tv": "lbry.tv",
+  "lbry.tv": "%odysee%",
   "Bid position must be a number.": "Bid position must be a number.",
   "Copy": "Copy",
   "Copy Link": "Copy Link",
@@ -816,7 +816,7 @@
   "%SITE_NAME% is more fun if you're following channels": "%SITE_NAME% is more fun if you're following channels",
   "Saved zip archive to %outputPath%": "Saved zip archive to %outputPath%",
   "Share usage and diagnostic data": "Share usage and diagnostic data",
-  "This is information like error logging, performance tracking, and usage statistics. It includes your IP address and basic system details, but no other identifying information (unless you sign in to lbry.tv)": "This is information like error logging, performance tracking, and usage statistics. It includes your IP address and basic system details, but no other identifying information (unless you sign in to lbry.tv)",
+  "This is information like error logging, performance tracking, and usage statistics. It includes your IP address and basic system details, but no other identifying information (unless you sign in to lbry.tv)": "This is information like error logging, performance tracking, and usage statistics. It includes your IP address and basic system details, but no other identifying information (unless you sign in to %odysee%)",
   "Allow the app to share data to LBRY.inc": "Allow the app to share data to LBRY.inc",
   "Internal sharing is required to participate in rewards programs.": "Internal sharing is required to participate in rewards programs.",
   "We use detailed analytics to improve all aspects of the LBRY experience.": "We use detailed analytics to improve all aspects of the LBRY experience.",
@@ -872,7 +872,7 @@
   "Are you sure? Type %name% to confirm that you wish to remove the channel.": "Are you sure? Type %name% to confirm that you wish to remove the channel.",
   "This will permanently remove your channel. Content published under this channel will be orphaned.": "This will permanently remove your channel. Content published under this channel will be orphaned.",
   "Are you sure you'd like to remove \"%title%\"?": "Are you sure you'd like to remove \"%title%\"?",
-  "You are signed into lbry.tv which automatically shares data with LBRY inc. %signout_button%.": "You are signed into lbry.tv which automatically shares data with LBRY inc. %signout_button%.",
+  "You are signed into lbry.tv which automatically shares data with LBRY inc. %signout_button%.": "You are signed into %odysee% which automatically shares data with LBRY inc. %signout_button%.",
   "%SITE_NAME% works better if you find and follow a couple creators you like. You can also block channels you never want to see.": "%SITE_NAME% works better if you find and follow a couple creators you like. You can also block channels you never want to see.",
   "Nice! You are currently following %followingCount% creator": "Nice! You are currently following %followingCount% creator",
   "Nice! You are currently following %followingCount% creators": "Nice! You are currently following %followingCount% creators",
@@ -895,7 +895,7 @@
   "Creator Analytics": "Creator Analytics",
   "Channel profile picture": "Channel profile picture",
   "Reposts of %uri%": "Reposts of %uri%",
-  "A backup of your wallet is synced with lbry.tv.": "A backup of your wallet is synced with lbry.tv.",
+  "A backup of your wallet is synced with lbry.tv.": "A backup of your wallet is synced with %odysee%.",
   "Tag selection": "Tag selection",
   "Select some tags to help us show you interesting things.": "Select some tags to help us show you interesting things.",
   "You are currently following %followingCount% tags": "You are currently following %followingCount% tags",
@@ -1070,7 +1070,7 @@
   "Downloads": "Downloads",
   "Purchases": "Purchases",
   "No purchases found.": "No purchases found.",
-  "Your wallet is not currently synced with lbry.tv. You are in control of backing up your wallet.": "Your wallet is not currently synced with lbry.tv. You are in control of backing up your wallet.",
+  "Your wallet is not currently synced with lbry.tv. You are in control of backing up your wallet.": "Your wallet is not currently synced with %odysee%. You are in control of backing up your wallet.",
   "Drop here to publish!": "Drop here to publish!",
   "Trending for %tagName%": "Trending for %tagName%",
   "Recent From Following": "Recent From Following",
@@ -1086,8 +1086,8 @@
   "Hate these? %log_in_to_domain% or %download_the_app% for an ad free experience.": "Hate these? %log_in_to_domain% or %download_the_app% for an ad free experience.",
   "Log in to %domain%": "Log in to %domain%",
   "download the app": "download the app",
-  "lbry.tv collects usage information for itself only (%more_information%).": "lbry.tv collects usage information for itself only (%more_information%).",
-  "lbry.tv collects usage information for itself only (%more_information%). Want control over this and more?": "lbry.tv collects usage information for itself only (%more_information%). Want control over this and more?",
+  "lbry.tv collects usage information for itself only (%more_information%).": "%odysee% collects usage information for itself only (%more_information%).",
+  "lbry.tv collects usage information for itself only (%more_information%). Want control over this and more?": "%odysee% collects usage information for itself only (%more_information%). Want control over this and more?",
   "more --[value for \"more_information\"]--": "more",
   "%DOMAIN% performance may be degraded. You can try to use it, or wait 5 minutes and refresh. Please no crush us.": "%DOMAIN% performance may be degraded. You can try to use it, or wait 5 minutes and refresh. Please no crush us.",
   "Please %sign_in_link% to comment.": "Please %sign_in_link% to comment.",
@@ -1155,7 +1155,7 @@
   "Reward validation pending": "Reward validation pending",
   "Checkout": "Checkout",
   "Your cart contains 1 item.": "Your cart contains 1 item.",
-  "lbry.tv Premium - 1 month": "lbry.tv Premium - 1 month",
+  "lbry.tv Premium - 1 month": "%odysee% Premium - 1 month",
   "We will refund no questions asked within 30 days.": "We will refund no questions asked within 30 days.",
   "Buy": "Buy",
   "buy": "buy",
@@ -1580,7 +1580,7 @@
   "Follow more channels to reach the next level.": "Follow more channels to reach the next level.",
   "You need to improve the cool-aid (gain more followers) to get to the next level.": "You need to improve the cool-aid (gain more followers) to get to the next level.",
   "A channel is required to repost on %SITE_NAME%": "A channel is required to repost on %SITE_NAME%",
-  "A channel is required to repost on lbry.tv": "A channel is required to repost on lbry.tv",
+  "A channel is required to repost on lbry.tv": "A channel is required to repost on %odysee%",
   "No channels": "No channels",
   "You haven't created a channel yet. All of your beautiful channels will be listed here!": "You haven't created a channel yet. All of your beautiful channels will be listed here!",
   "Something didn't work. Please try again.": "Something didn't work. Please try again.",
@@ -1699,7 +1699,7 @@
   "Enter a name or %domain% URL": "Enter a name or %domain% URL",
   "Winning amount: %amount%": "Winning amount: %amount%",
   "Download or get the app": "Download or get the app",
-  "This content can be downloaded from lbry.tv, but not displayed. It will display in LBRY Desktop, an app for desktop computers.": "This content can be downloaded from lbry.tv, but not displayed. It will display in LBRY Desktop, an app for desktop computers.",
+  "This content can be downloaded from lbry.tv, but not displayed. It will display in LBRY Desktop, an app for desktop computers.": "This content can be downloaded from %odysee%, but not displayed. It will display in LBRY Desktop, an app for desktop computers.",
   "Repost Here": "Repost Here",
   "Publish Here": "Publish Here",
   "Close sidebar - hide channels you are following.": "Close sidebar - hide channels you are following.",
@@ -1805,7 +1805,7 @@
   "News and updates from LBRY": "News and updates from LBRY",
   "Announcements, updates, and rewards specific to users of LBRY Desktop": "Announcements, updates, and rewards specific to users of LBRY Desktop",
   "Communications about lbry.org, the community-owned and operated LBRY group": "Communications about lbry.org, the community-owned and operated LBRY group",
-  "Announcements, updates, and rewards specific to users of lbry.tv": "Announcements, updates, and rewards specific to users of lbry.tv",
+  "Announcements, updates, and rewards specific to users of lbry.tv": "Announcements, updates, and rewards specific to users of %odysee%",
   "Receive emails about the latest rewards that are available to LBRY users.": "Receive emails about the latest rewards that are available to LBRY users.",
   "Stay up to date on the latest content from your favorite creators.": "Stay up to date on the latest content from your favorite creators.",
   "Receive tutorial emails related to LBRY ": "Receive tutorial emails related to LBRY ",
